kubernetes-manifestfiles/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  namespace: react-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      imagePullSecrets:
        - name: gcr-auth
      containers:
        - name: react-container
          image: suryaprasad9773/react-nginx:20250519060559
          ports:
            - containerPort: 80
