kubernetes-manifestfiles/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: react-nginx
spec:
  selector:
    app: react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
